[gd_scene load_steps=37 format=3 uid="uid://ddbkx1m8n74tr"]

[ext_resource type="Script" uid="uid://chw3mqjayarr5" path="res://player/player.gd" id="1_4flbx"]
[ext_resource type="Texture2D" uid="uid://cpyv1e43yyd2t" path="res://art/Small-8-Direction-Characters_by_AxulArt/Small-8-Direction-Characters_by_AxulArt.png" id="2_onrkg"]
[ext_resource type="PackedScene" uid="uid://blu12ycy8r0s7" path="res://utils/StateMachine/state_machine.tscn" id="4_kb6p2"]
[ext_resource type="Script" uid="uid://qksyhxgitd02" path="res://player/PlayerStates/down.gd" id="5_wodsf"]
[ext_resource type="Script" uid="uid://b0i3fwp3pjyoi" path="res://player/PlayerStates/down_left.gd" id="6_32hag"]
[ext_resource type="Script" uid="uid://bdgu27456sm0h" path="res://player/PlayerStates/down_right.gd" id="7_tqiix"]
[ext_resource type="Script" uid="uid://bnvhi1ry4gnof" path="res://player/PlayerStates/idle.gd" id="8_e7oew"]
[ext_resource type="Script" uid="uid://bjt31se4264s" path="res://player/PlayerStates/left.gd" id="9_c35mf"]
[ext_resource type="Script" uid="uid://c02ty121jvpqd" path="res://player/PlayerStates/right.gd" id="10_65viv"]
[ext_resource type="Script" uid="uid://qfl7dp8tavsw" path="res://player/PlayerStates/up.gd" id="11_x7c3f"]
[ext_resource type="Script" uid="uid://f6rhw2gxin7r" path="res://player/PlayerStates/up_left.gd" id="12_bjvpn"]
[ext_resource type="Script" uid="uid://dhntttcr626sk" path="res://player/PlayerStates/up_right.gd" id="13_s7qer"]
[ext_resource type="Script" uid="uid://ctfqoguqyewbi" path="res://player/PlayerStates/paused.gd" id="14_g4c7l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(13.6667, 19.6667)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("2_onrkg")
region = Rect2(64, 24, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("2_onrkg")
region = Rect2(64, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("2_onrkg")
region = Rect2(80, 24, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("2_onrkg")
region = Rect2(80, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("2_onrkg")
region = Rect2(48, 24, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("2_onrkg")
region = Rect2(48, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_onrkg"]
atlas = ExtResource("2_onrkg")
region = Rect2(64, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("2_onrkg")
region = Rect2(96, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("2_onrkg")
region = Rect2(32, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("2_onrkg")
region = Rect2(0, 48, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("2_onrkg")
region = Rect2(96, 24, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("2_onrkg")
region = Rect2(96, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("2_onrkg")
region = Rect2(32, 24, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("2_onrkg")
region = Rect2(32, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("2_onrkg")
region = Rect2(0, 24, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("2_onrkg")
region = Rect2(0, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("2_onrkg")
region = Rect2(112, 24, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("2_onrkg")
region = Rect2(112, 72, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("2_onrkg")
region = Rect2(16, 24, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("2_onrkg")
region = Rect2(16, 72, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_nvl01"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}],
"loop": true,
"name": &"down_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}],
"loop": true,
"name": &"down_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onrkg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}],
"loop": true,
"name": &"up_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}],
"loop": true,
"name": &"up_right",
"speed": 5.0
}]

[sub_resource type="GDScript" id="GDScript_kb6p2"]
script/source = "extends Node
"

[node name="Player" type="CharacterBody2D"]
scale = Vector2(3, 3)
script = ExtResource("1_4flbx")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.500001, 2.16666)
shape = SubResource("RectangleShape2D_onrkg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_nvl01")
animation = &"idle"

[node name="PlayerController" type="Node" parent="."]
script = SubResource("GDScript_kb6p2")

[node name="StateMachine" parent="." node_paths=PackedStringArray("default_state") instance=ExtResource("4_kb6p2")]
default_state = NodePath("Idle")

[node name="Down" type="Node" parent="StateMachine"]
script = ExtResource("5_wodsf")

[node name="DownLeft" type="Node" parent="StateMachine"]
script = ExtResource("6_32hag")

[node name="DownRight" type="Node" parent="StateMachine"]
script = ExtResource("7_tqiix")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("8_e7oew")

[node name="Left" type="Node" parent="StateMachine"]
script = ExtResource("9_c35mf")

[node name="Right" type="Node" parent="StateMachine"]
script = ExtResource("10_65viv")

[node name="Up" type="Node" parent="StateMachine"]
script = ExtResource("11_x7c3f")

[node name="UpLeft" type="Node" parent="StateMachine"]
script = ExtResource("12_bjvpn")

[node name="UpRight" type="Node" parent="StateMachine"]
script = ExtResource("13_s7qer")

[node name="Paused" type="Node" parent="StateMachine"]
script = ExtResource("14_g4c7l")
